# Final-Project-HPC

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  HELP.md  README.md
cmake/: CompilerOptions.cmake  CompilerOptionsLinux.cmake  CompilerOptionsWindows.cmake  README.md
formatter/: cmake-format.yaml  format-cmake-files.sh
projects/: CMakeLists.txt  README.md
projects/include/parallel/: DistanceComputers.h  ParallelClustering.h
projects/include/sequential/: SequentialClustering.h
projects/include/utils/: ContiguousDoubleMemoryDataIterator.h  DataIteratorUtils.h  IteratorType.h  Logger.h  PiLambdaIteratorUtils.h  Timer.h  Types.h
projects/parallel/: CMakeLists.txt
projects/sequential/: CMakeLists.txt
projects/sequential/src/: main.cpp
projects/src/parallel/: CMakeLists.txt  ParallelClustering.cpp
projects/src/parallel/src/: main.cpp
projects/src/sequential/: CMakeLists.txt  SequentialClustering.cpp
projects/src/sequential/src/: main.cpp
projects/src/utils/: ContiguousDoubleMemoryDataIterator.cpp  DataIteratorUtils.cpp  Logger.h  PiLambdaIteratorUtils.cpp  SimdUtils.h  Timer.cpp  Timer.h
report/: report.md  report.tex
report/images/graphs/: graph-accelerometer-array.tikz  graph-accelerometer-vector.tikz  graph-generated-array.tikz  graph-generated-vector.tikz  legend.tikz
test/: CMakeLists.txt  README.md  build-all.sh  main-test-types.cpp  run-measurements-tests.sh
test/other/: CMakeLists.txt  README.md  main-test-array-types.cpp  main-test-lists.cpp  main-test-types.cpp
test/other/types/: DataTypesTest.h  DataTypesTester.h  PiLambdaTypesTester.h
test/other/types/collections/: OnlyIterableVector.h
test/other/types/containers/: CollectionInfo.h  PiLambdaContainer.h
test/other/types/containers/array/: ArrayContainer.h  ArrayNonIterableSubContainer.h  ArrayOnlyConstIterableSubContainer.h  ArrayOnlyIterableSubContainer.h  ArraySubContainer.h  ArrayTypeNameComposer.h
test/other/types/containers/collection/: CollectionContainer.h  CollectionNonIterableSubContainer.h  CollectionOnlyIterableSubContainer.h  CollectionSubContainer.h  CollectionTypeNameComposer.h
test/other/types/containers/pointer/: PointerContainer.h  PointerNonIterableSubContainer.h  PointerOnlyConstIterableSubContainer.h  PointerOnlyIterableSubContainer.h  PointerSubContainer.h
test/src/: ClusteringAlgorithmExecutor.cpp  ClusteringAlgorithmExecutor.h  DataReader.cpp  DataWriter.h  MalformedFileException.cpp  MalformedFileException.h  ResultsChecker.cpp  ResultsChecker.h  generate.cpp  main-data-generator.cpp  main-main-times-printer.cpp  main-mean-times-printer.cpp  main-measurements.cpp  main-sample.cpp  main-test-array-types.cpp  main-test-types.cpp  main-test.cpp  main.cpp  mainParallel.cpp  mainSequential.cpp  mainTest.cpp  measurements.cpp
test/src/cli/: CliArgumentException.cpp  CliArgumentException.h  CliArguments.cpp  CliArguments.h  CliArgumentsParser.cpp  CliArgumentsParser.h
test/src/data/: DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  IoException.cpp  IoException.h  MalformedFileException.cpp  MalformedFileException.h  ResultsChecker.cpp  ResultsChecker.h
test/src/types/: AlignedArray.h  Alignments.h  ArrayCollectionContainer.h  CollectionContainer.h  CollectionCreator.h  DataTypesTester.h  LinearCollectionContainer.h  PiLambdaTypesTester.h  PointerCollectionContainer.h  PointerWrapper.h  SubContainerWrapper.h  TypesPrinter.h
test/src/types/collections/: AlignedArray.h  Alignments.h  ArrayWrapper.h  CollectionContainer.h  LinearCollectionContainer.h  NonIterableContentSubContainer.h  OnlyConstIterableSubContainer.h  OnlyConstIterableVector.h  OnlyIterableSubContainer.h  PiLambdaContainer.h  SubContainer.h
test/src/types/containers/: CollectionInfo.h  LinearCollectionContainer.h
test/src/types/containers/array/: ArrayOnlyConstIterableSubContainer.h  ArrayOnlyIterableSubContainer.h  ArraySubContainer.h
test/src/types/containers/collection/: CollectionContainer.h  CollectionOnlyConstIterableSubContainer.h  CollectionSubContainer.h
test/src/types/containers/pointer/: PointerNonIterableSubContainer.h  PointerOnlyIterableSubContainer.h  PointerTypeNameComposer.h
test/src/types/old/: ArrayCollectionContainer.h  PointerWrapper.h
visualizer/DeB_Cluster_Visualizer/: .gitignore  HELP.md  README.md  base.gradle  build.gradle  javaFX.gradle  lombok.config  settings.gradle
visualizer/DeB_Cluster_Visualizer/gradle/wrapper/: gradle-wrapper.properties
visualizer/DeB_Cluster_Visualizer/modules/main/: build.gradle
visualizer/DeB_Cluster_Visualizer/modules/main/src/main/java/: module-info.java
visualizer/DeB_Cluster_Visualizer/modules/main/src/main/java/it/debsite/dcv/main/: CliArgumentsParser.java  MainApplication.java  MainDendrogramPrinter.java  MainDistanceComputer.java  MainGraphPrinter.java  package-info.java
visualizer/DeB_Cluster_Visualizer/modules/main/src/main/resources/fxml/: window.fxml
visualizer/DeB_Cluster_Visualizer/modules/model/: build.gradle
visualizer/DeB_Cluster_Visualizer/modules/model/src/main/java/: module-info.java
visualizer/DeB_Cluster_Visualizer/modules/model/src/main/java/it/debsite/dcv/model/: Cluster.java  ClusterFileReader.java  ClusterPoint.java  MalformedFileException.java  ParseResult.java  package-info.java
visualizer/DeB_Cluster_Visualizer/modules/presenter/: build.gradle
visualizer/DeB_Cluster_Visualizer/modules/presenter/src/main/java/: module-info.java
visualizer/DeB_Cluster_Visualizer/modules/presenter/src/main/java/it/debsite/dcv/presenter/: CanvasPresenter.java  DendrogramPresenter.java  GraphPresenter.java  package-info.java
visualizer/DeB_Cluster_Visualizer/modules/view/: build.gradle
visualizer/DeB_Cluster_Visualizer/modules/view/src/main/java/: module-info.java
visualizer/DeB_Cluster_Visualizer/modules/view/src/main/java/it/debsite/dcv/view/: DendrogramPrinter.java  DendrogramTreeNode.java  GraphAxisLabel.java  GraphCluster.java  GraphGridLine.java  GraphPoint.java  GraphPrinter.java  package-info.java
(+35 files in other folders)
